Fix misaligned chat button (#94716)

--- a/packages/help-center/src/components/help-center-third-party-cookies-notice.scss
+++ b/packages/help-center/src/components/help-center-third-party-cookies-notice.scss
@@ -6,4 +6,8 @@
 		font-weight: 500;
 		margin: 1em 0;
 	}
+
+	.help-center-third-party-cookies-notice__content {
+		padding: 0 30px 20px;
+	}
 }
